# aether

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.opencode/agents/: ask.md
.opencode/skills/crawl4ai/: SKILL.md
docs/: competition.md  examples.md  examples.txt  platform_rules.md  popular_channels.md  techniques.md
niche_config/: __init__.py  common.py  psychology.py
prompts/: __init__.py  psychology.py
src/: __init__.py  llm.py  model_utils.py  models.py  prompt_utils.py  services.py  state.py  workflow.py
src/base/: __init__.py  base_template.py  templates.py
src/constants/: __init__.py  engine_type.py
src/domain/: __init__.py  interfaces.py
src/engines/: __init__.py  content_engine.py  factory.py
src/generators/: __init__.py  generators.py
src/nodes/: __init__.py  chat.py  content_planner.py  extract_links.py  intent_router.py  message_analyzer.py  scraper.py  search_node.py  search_router.py  trending_research.py
src/schemas/: __init__.py  analysis.py  content_plan.py  search.py
src/strategies/: __init__.py
src/strategies/content/: __init__.py  psychology.py
src/strategies/headline/: __init__.py  psychology.py
src/strategies/video/: __init__.py  no_op.py
src/tools/: __init__.py  scrape.py  search.py
src/utils/: __init__.py  core_utils.py  helper.py  prompting.py
