[project]
name = "aether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "langchain-core>=1.2.16",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.10",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
