[project]
name = "aether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "crawl4ai>=0.8.0",
    "diffusers>=0.36.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mistralai>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "qwen-tts>=0.1.1",
    "torch>=2.10.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
